# meshcore-linux-spi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: meshcore-linux-spi.default
packaging/: build-deb.sh  patch-lorarf-wheel.py
packaging/systemd/: meshcore-linux-spi.service
src/meshcore_linux_spi/: __init__.py  daemon.py
src/meshcore_linux_spi/radios/: __init__.py  factory.py  sx1262.py  sx1276.py
