[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-linux-spi"
version = "0.1.1"
description = "MeshCore TCP companion service for Linux SBCs with raw SPI LoRa radios"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "meshcore-linux-spi contributors" }]
dependencies = [
  "pymc_core[hardware]>=1.0.10",
  "LoRaRF>=1.4.0",
  "spidev>=3.6",
  "gpiod>=2.2.0",
  "PyNaCl>=1.5",
]

[project.scripts]
meshcore-linux-spi = "meshcore_linux_spi.daemon:run"

[tool.setuptools.packages.find]
where = ["src"]
